fix(grid): remove double border for browsers without scrollbar
see telerik/kendo-angular-grid#380

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -760,6 +760,9 @@
         overflow: hidden;
     }
 
+    &.k-grid-no-scrollbar .k-grid-header-wrap {
+        border-width: 0;
+    }
 }
 
 // PDF export
